@@ -75,6 +75,7 @@ Engine fixes:
 * Added validation to player XP table parsing to ensure that XP thresholds are not less than those for previous levels.
 * Errors in saved fog-of-war data no longer causes a forced exit & mod reset.
 * Primary stat upgrade buttons are now hidden in the Character menu if the cooresponding label is hidden.
+* Fixed crash in action bar when less than 12 slots were defined.
 * Android: Fix 'Flare' directory not being automatically created.
 * Android: Added a dialog to direct the player to the wiki page for installing if no game data is found.
 
